--- a/app/view/token.html
+++ b/app/view/token.html
@@ -258,7 +258,7 @@
 							<p class="proceeds2-box-title">
 								Legal & Compliance (10%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								COTI will use proceeds to lay built a robust, global licensing footprint for its various services – wallets, exchange and payment services.
 							</p>
 						</div>
@@ -268,7 +268,7 @@
 							<p class="proceeds2-box-title">
 								R&D (25%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								COTI will fund the development program encompassing the base layer protocol, the exchange, the consumer and mediator client applications, merchant integration tools, and more.
 							</p>
 						</div>
@@ -278,7 +278,7 @@
 							<p class="proceeds2-box-title">
 								Marketing (16%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								Marketing to merchants and consumers will be a key aspect of fuelling the COTI network, building acceptance of COTI’s wallet.
 							</p>
 						</div>
@@ -288,7 +288,7 @@
 							<p class="proceeds2-box-title">
 								Merchant Services (12%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								Covers the delivery and maintenance of the non-software merchant services, including hedging services.
 							</p>
 						</div>
@@ -298,7 +298,7 @@
 							<p class="proceeds2-box-title">
 								Reserve (10%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								A portion of the proceeds will be set aside as reserve funds for future deployment of the market-maker, legal and compliance, or R&D (depending on requirements for network expansion).
 							</p>
 						</div>
@@ -308,7 +308,7 @@
 							<p class="proceeds2-box-title">
 								Market-Maker (10%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								COTI’s automated market-maker will be seeded with capital in order to establish a healthy functioning market for COTI and other currencies flowing through the network.
 							</p>
 						</div>
@@ -318,7 +318,7 @@
 							<p class="proceeds2-box-title">
 								COTI Fund (10%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								A portion of the proceeds will be set aside to invest in, and assist, other ventures that build upon COTI's technology.
 							</p>
 						</div>
@@ -328,7 +328,7 @@
 							<p class="proceeds2-box-title">
 								Operational Expenses (7%)
 							</p>
-							<p class="proceeds2-box-title">
+							<p class="proceeds2-box-text">
 								Covers various operational expenses that will be incurred by COTI.
 							</p>
 						</div>
