--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -1682,7 +1682,6 @@ section#proceeds .content>div {
 
 section#proceeds .content>div:nth-child(even) {
     margin: 5vh 5% 5vh auto;
-    width: 320px;
 }
 
 section#proceeds .content>div:nth-child(odd) {
@@ -1742,22 +1741,6 @@ section#proceeds2 .content {
     margin: 0 auto 10vh auto;
 }
 
-section#proceeds2 .content {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 5%;
-    width: 90%;
-    height: auto;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-}
-
 section#proceeds2 .proceeds2-box-container {
     width: 33.33%;
 }
@@ -1793,6 +1776,7 @@ section#proceeds2 .proceeds2-box .proceeds2-box-title:before {
     font-size: 45px;
     padding: 0 5px 0 0;
     vertical-align: -4px;
+    display: inline-block;
 }
 
 section#proceeds2 .proceeds2-box-container:nth-of-type(1) .proceeds2-box-title:before {
